--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 
 # Test binary, built with `go test -c`
 *.test
+/db/create_db
+.env
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
